--- a/tox.ini
+++ b/tox.ini
@@ -15,3 +15,18 @@ passenv = PBR_VERSION
 setenv = OS_TEST_PATH=./placement/tests/functional
 commands = 
     bash tools/pretty_tox.sh '{posargs}'
+
+[testenv:pep8]
+commands =
+    flake8
+
+[flake8]
+enable-extensions = H106,H203,H904
+ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E251,H405
+exclude =  .venv,.git,.tox,dist,doc,*lib/python*,*egg,build,tools/xenserver*,releasenotes
+import-order-style = pep8
+# To get a list of functions that are more complex than 25, set max-complexity
+# to 25 and run 'tox -epep8'.
+# 34 is currently the most complex thing we have
+# TODO(jogo): get this number down to 25 or so
+max-complexity=35
